Booking fixed btn - Changed display none to visibility hidden in CSS

--- a/src/components/pages/home/About.module.css
+++ b/src/components/pages/home/About.module.css
@@ -38,8 +38,7 @@
 	right: 6%;
 	z-index: 2000;
 	transition: all 0.3s ease-in;
-	opacity: 0;
-	display: none;
+	visibility: hidden;
 }
 
 .bookingBtn:hover {
